# lxd_backup_system_zfs

./: .gitignore  main.py  pyproject.toml  pytest.ini
config/: base_config.py  util.py
lxdbackup/: api.py  backup.py  backup_commands.py  backup_logs.py  connection.py  copy_params.py  job.py  lxd.py  lxd_check.py  shared.py  zfs.py
tests/: test_baseconfig.py  test_client.crt  test_lxd_cmdbackup.py  test_lxdbackup.py
